# ai-packet-analyzer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ai-packet-analyzer.spec  build.sh  build_entry.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-release.yml
docs/: index.html  style.css
src/ai_packet_analyzer/: __init__.py  ai_engine.py  cli.py  env_loader.py  live_capture.py  live_ui.py  llm_analyzer.py  llm_providers.py  packet_parser.py  report_renderer.py
tests/: TEST_PLAN.md  run_comprehensive_tests.py  test_cli_output_path.py  test_env_loader.py  test_live_capture.py  test_smoke_imports.py
tests/pcaps/: synthetic_test.pcap
