[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-packet-analyzer"
version = "1.0.0"
description = "AI-powered network packet analyzer for connectivity troubleshooting and security auditing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "scapy>=2.5.0",
    "pyshark>=0.6",
    "rich>=13.0.0",
]

[project.scripts]
ai-packet-analyzer = "ai_packet_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
